--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   @apply leading-[138%] lg:text-lg;
 }
 .auth-input {
-  @apply w-full rounded-md border border-[#CCCCCC]/[14%] bg-lighterDark  p-1.5 focus:outline-none lg:p-3;
+  @apply w-full rounded-md border border-[#CCCCCC]/[14%]  p-1.5 focus:outline-none lg:p-3;
 }
 
 .scrollbar-none::-webkit-scrollbar {
